# nutridle

./: .gitignore  Cargo.toml  Dioxus.toml
nutridle/: README.md
nutridle/src/: main.rs
nutridle/src/components/: mod.rs
nutridle/src/components/Game/: ItemDescription.rs
nutridle/src/server/api/: guess_food.rs
nutridle/src/server/db/: mod.rs
nutridle/src/server/seed/: FoodData.rs
nutridle/src/structs/: food.rs
src/components/: App.rs
src/components/Game/: FoodOption.rs  mod.rs
src/server/: mod.rs
src/server/api/: mod.rs
src/server/seed/: mod.rs
src/structs/: mod.rs
