[package]
name = "nutridle"
version = "0.1.0"
authors = ["y-golde <yon.golde@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
dioxus-logger = "0.5.1"
serde_json = "1.0.132"
serde_with = "3.11.0"
rand = "0.8.5"
lazy_static = "1.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }